rename REST API specification
