# rest/restapi/operations/rename_parameters.go
@@ -1,0 +1,87 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime/middleware"
+
+	strfmt "github.com/go-openapi/strfmt"
+)
+
+// NewRenameParams creates a new RenameParams object
+// with the default values initialized.
+func NewRenameParams() RenameParams {
+	var ()
+	return RenameParams{}
+}
+
+// RenameParams contains all the bound params for the rename operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters rename
+type RenameParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*
+	  Required: true
+	  In: path
+	*/
+	Newname string
+	/*
+	  Required: true
+	  In: path
+	*/
+	Source string
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls
+func (o *RenameParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+	o.HTTPRequest = r
+
+	rNewname, rhkNewname, _ := route.Params.GetOK("newname")
+	if err := o.bindNewname(rNewname, rhkNewname, route.Formats); err != nil {
+		res = append(res, err)
+	}
+
+	rSource, rhkSource, _ := route.Params.GetOK("source")
+	if err := o.bindSource(rSource, rhkSource, route.Formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (o *RenameParams) bindNewname(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+
+	o.Newname = raw
+
+	return nil
+}
+
+func (o *RenameParams) bindSource(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+
+	o.Source = raw
+
+	return nil
+}
